--- a/packages/taro-ui/src/style/mixins/index.scss
+++ b/packages/taro-ui/src/style/mixins/index.scss
@@ -3,16 +3,16 @@
  */
 
 /* library */
-@import './libs/absolute-center';
-@import './libs/clearfix';
-@import './libs/line';
-@import './libs/overlay';
-@import './libs/shade';
-@import './libs/tint';
-@import './libs/flex';
-@import './libs/border';
-@import './libs/active';
-@import './libs/disabled';
-@import './libs/placeholder';
-@import './libs/alignhack';
-@import './libs/hairline';
+@import './libs/absolute-center.scss';
+@import './libs/clearfix.scss';
+@import './libs/line.scss';
+@import './libs/overlay.scss';
+@import './libs/shade.scss';
+@import './libs/tint.scss';
+@import './libs/flex.scss';
+@import './libs/border.scss';
+@import './libs/active.scss';
+@import './libs/disabled.scss';
+@import './libs/placeholder.scss';
+@import './libs/alignhack.scss';
+@import './libs/hairline.scss';
